[BUGFIX] enable fluid_styled_content ce-gallery column selector (refs #17535)

--- a/Resources/Private/Templates/ContentElements/TextpicResponsive.html
+++ b/Resources/Private/Templates/ContentElements/TextpicResponsive.html
@@ -173,6 +173,11 @@
 	</div>
 </f:section>
 
+<f:section name="imageorient-170">
+	<div class="csc-textpic csc-textpic-responsive csc-textpic-gallery">
+		<f:render partial="TextImageContent" arguments="{_all}" />
+	</div>
+</f:section>
 
 <f:comment>
 
