[BUGIFX] update to lazysizes v5.1.1 for fixing windows Edge bug (refs #21114, #20154)

--- a/Resources/Private/Partials/ContentElements/Media/Rendering/Image.html
+++ b/Resources/Private/Partials/ContentElements/Media/Rendering/Image.html
@@ -1,4 +1,4 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 {namespace v=Visol\Viresponsiveimages\ViewHelpers}
-<v:responsiveImage src="{file.uid}" treatIdAsReference="true" class="img-fluid" maxWidth="2400"/>
+<v:responsiveImage src="{file.uid}" treatIdAsReference="true" class="img-fluid" maxWidth="2400" additionalAttributes="{data-sizes:'auto'}" />
 </html>
